input error style & dates with no timetables
The style for input errors was missing. Also, even if it weren't, entering a destination date for which no timetables exist (because too far in the future or past) would have indicated an invalid source address instead of an invalid travel date.

Both fixed.

--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,9 @@ h1 {
     background-color: lightcoral;
     border: 1px solid red;
 }
+.inputError {
+    background-color: orange;
+}
 .form button {
     grid-column: span 2;
 }
